# dev

./: .gitignore
blender/: axes.blend  axes.blend1  corvette.blend  corvette.blend1
media/core/: box.json  line.json  simple.fragmentShader.glsl  simple.program.json
media/geometry/: triangle.json
media/geometry/core/: triangle.json
media/geometry/skybox/: skybox.json
media/geometry/terrain/: terrain.json
media/imagenes/BACKGROUNDS/: LOG.TXT  Thumbs.db
media/imagenes/CONCRETE/: LOG.TXT
media/imagenes/FABRIC/: Thumbs.db
media/imagenes/FLARES/: LOG.TXT  Thumbs.db
media/imagenes/GROUND/: LOG.TXT  Thumbs.db
media/imagenes/METAL/: TAIL_FIN_DISPLACEMENT.TIF  (+2 more)
media/roadFighter/: corvette.mtl
media/shaders/: lighting.fragmentShader.glsl  lighting.program.json  lighting.vertexShader.glsl  simple.fragmentShader.glsl  simple.program.json  simple.vertexShader.glsl  toon.330.program.json  toon.330.vertexShader.glsl  toon.program.json
media/tests/: geometry.json
playground/: .cproject  .gitignore  CMakeLists.txt  lldb.settings  readme.txt  resources.txt  todos.txt
playground/src/: PlaygroundGeneralDemo.h  PlaygroundTest.h  main.cpp  todos.txt
playground/src/audio/: AudioRunner.h  CMakeLists.txt  audioRunner.h
playground/src/audio/adapters/: BufferResourceAdapter.h  OggResourceAdapter.h  SourceResourceAdapter.h  WavResourceAdapter.h
playground/src/audio/resources/: AudioResource.h  BufferResource.h  OggResource.h  SourceResource.h
playground/src/core/: CMakeLists.txt  Playground.cpp  Playground.h  javaLike.h  playground.h
playground/src/demo/: ColDetDemo.h  GeneralDemo.h  ObjDemo.h  PhysicsDemo.h  PlaygroundTest.h  RoadFighter.h  TerrainDemo.h
playground/src/demo/base/: BaseDemo.h
playground/src/demo/heightMap/: HeightMapGeometry.h
playground/src/demo/inputController/: FPSInputController.h  ThirdPersonInputController.h
playground/src/exceptions/: CMakeLists.txt  Exception.h  InvalidArgumentException.h  InvalidOperationException.h  InvalidStateException.h
playground/src/geometry/: BaseContact.h  CMakeLists.txt  Geometry.cpp  Geometry.h  GeometryContact.h  Sphere.h
playground/src/geometry/intersection/: CollisionTester.h  IntersectionHelper.h  IntersectionTester.cpp  IntersectionTester.h
playground/src/geometry/tests/: CollisionTesterTests.h  GeometryTests.h
playground/src/javaLike/: JavaLike.h  StringFormatter.h  StringUtils.h
playground/src/log/: CMakeLists.txt  Logger.cpp  Logger.h
playground/src/math/: CMakeLists.txt  Math3d.cpp  Math3d.h  MathConstants.h  MathUtilities.h
playground/src/math/functions/: CubicBezier.h  Function.h  FunctionRealVectorial.h
playground/src/math/tests/: Math3dTests.h
playground/src/openGL/: CMakeLists.txt  OpenGLRunner.h  OpenGLUtilities.h  Win32GLRunner.h
playground/src/openGL/adapters/: CubeMapResourceAdapter.h  FragmentShaderResourceAdapter.h  HeightMapResourceAdapter.h  MeshResourceAdapter.h  OpenGLResourceAdapter.h  ShaderProgramResourceAdapter.h  ShaderResourceAdapter.h  TerrainResourceAdapter.h  TextureResourceAdapter.h  VertexArrayAdapter.h  VideoAdapter.h
playground/src/openGL/adapters/normalGenerators/: NormalGenerator.h
playground/src/openGL/resources/: ShaderProgramResource.h  TextureResource.h  VertexArrayResource.h
playground/src/parser/: CMakeLists.txt  JsonParser.h  ParsingException.h  TextParser.h
playground/src/physics/: CMakeLists.txt  CollisionDetector.h  Contact.h  ContactResolver.h  Particle.h  ParticleContact.h  ParticleIntegrator.h  ParticleManager.h  PhysicsRunner.h
playground/src/physics/collisionDetection/: GroundPlaneCollisionDetector.h  IntersectionTester.h  SpheresCollisionDetector.h
playground/src/physics/collisionDetection/geometry/: Geometry.h
playground/src/physics/forces/: Gravity.h
playground/src/physics/geometry/: Geometry.h  Line.h  LinkedSphere.h  Plane.h  Sphere.h
playground/src/physics/tests/: CollisionDetectorTests.h  ContactResolverTests.h
playground/src/resources/: CMakeLists.txt  FileParser.cpp  FileParser.h  MimeTypes.h  Paths.h  Resource.cpp  Resource.h  ResourceAdapter.h  ResourceLoadRequest.h  ResourceLoadResponse.cpp  ResourceLoadResponse.h  ResourceManager.cpp  ResourceManager.h
playground/src/resources/tests/: PathsTests.h  ResourceLoadRequestTests.h  ResourceLoadResponseTests.h  ResourceManagerMock.h  ResourceManagerTests.h
playground/src/test/: AssertionFailedException.h  PlaygroundTest.h  TestRunner.h  Tests.h
playground/src/util/: StringUtils.h
playground/src/video/: ArcBall.h  CMakeLists.txt  Camera.h  Renderer.h  VideoRunner.h  videoRunner.h
playground/src/video/adapters/: GeometryResourceAdapter.h  HeightMapResourceAdapter.h  JpegResourceAdapter.h  MtlResourceAdapter.h  ObjResourceAdapter.h  PngResourceAdapter.h  ShaderProgramResourceAdapter.h  ShaderResourceAdapter.h  TerrainResourceAdapter.h  TextureResourceAdapter.h  TgaResourceAdapter.h  VertexArrayAdapter.h  VertexBufferAdapter.h
playground/src/video/adapters/normalGenerators/: NormalGenerator.cpp  NormalGenerator.h
playground/src/video/camera/: Camera.h
playground/src/video/renderers/: DefaultRenderer.h  GridRenderer.h  SkyboxRenderer.h  TerrainRenderer.h
playground/src/video/renderers/geometry/: DrawableAABB.h  DrawableHierarchy.h  DrawableSphere.h  GeometryRenderer.h
playground/src/video/resources/: CubeMapResource.h  GeometryCollection.h  GeometryResource.h  HeightMapResource.h  ImageResource.h  JpegResource.h  MaterialCollection.h  MaterialResource.h  MeshCollection.h  MeshResource.h  ShaderProgramResource.h  ShaderResource.h  TerrainResource.h  TextureResource.h  VertexArrayResource.h  VertexBufferResource.h
playground/src/video/tests/: GeometryResourceAdapterTests.h  ObjResourceAdapterTests.h
playground/src/win32/: PlaygroundWin32.h  wglRunner.h  win32apiRunner.h
playground/src/windowing/: CMakeLists.txt  PlaygroundWin32.h  SDLRunner.h  wglRunner.h  win32apiRunner.h
repo/lib/: LIBPNG.LIB  ZLIB.LIB
stl/src/: main.cpp
win_playground/: .cproject
win_playground/Debug/: makefile  sources.mk
win_playground/src/: main.cpp  todos.txt
(+45 files in other folders)
